FACT-374 - Added 'apm' group into cookie manifesto and renamed to 'rum' to 'apm' to be consistent

--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -285,8 +285,8 @@
     }) }}
     {{ govukRadios({
       classes: 'govuk-radios',
-      idPrefix: 'rum',
-      name: 'rum',
+      idPrefix: 'apm',
+      name: 'apm',
       fieldset: {
         legend: {
           text: "Allow cookies that measure website application performance monitoring?",
