FACT-412 - Updated cookie banner and preference form ID

--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -163,7 +163,7 @@
     ]
   }) }}
 
-  <form id="cm_user_preference_form" class="js-show">
+  <form id="cm-preference-form" class="js-show">
     {{ govukRadios({
       classes: 'govuk-radios',
       idPrefix: 'analytics',
