--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -39,7 +39,7 @@
       <p>You can <a href="/cookies">change your cookie settings</a> at any time.</p>
     {% endset %}
 
-    <div class="global-cookie-message" id="cookie_banner" hidden>
+    <div class="global-cookie-message" id="cm-cookie-banner" hidden>
       {{ govukCookieBanner({
         ariaLabel: cookieBannerH1,
         messages: [
