returning data from backend, displaying as expected

--- a/src/main/views/postcode-results.njk
+++ b/src/main/views/postcode-results.njk
@@ -35,9 +35,16 @@
           </div>
         {% else %}
           <div>
-            <p class="govuk-body-m">
-              {{ singleResultsHint if results.courts.length === 1 else multipleResultsHint }}
-            </p>
+            {% if postcodeOnlySearch %}
+              <p class="govuk-body-m">
+                {{ postcodeSearchResultsHint }}
+              </p>
+            {% else %}
+              <p class="govuk-body-m">
+                {{ singleResultsHint if results.courts.length === 1 else multipleResultsHint }}
+              </p>
+            {% endif %}
+
           </div>
           <div id="search-results">
             {% for court in results.courts %}
