FACT-411 - Added in Breathing Space sidebar link and displaying of some emails on not-in-person courts

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -213,6 +213,11 @@
                 {% endif %}
               </li>
             {% endfor %}
+            {% if 'County Court' in results.types %}
+              <li>
+                <a class="govuk-link" href="https://www.gov.uk/guidance/debt-respite-breathing-space-scheme-creditors-responsibilities-to-the-court">{{ breathingSpace }}</a>
+              </li>
+            {% endif %}
           </ul>
         </div>
       {% endif %}
