--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -156,6 +156,26 @@
                 {{ email.explanation }}
               </p>
               {% endfor %}
+              {% for email in results.emails %}
+                {% if email.description !== 'Enquiries' and email.description !== 'Send documents' %}
+                <div class="govuk-grid-row">
+                  <div class="govuk-grid-column-one-third">
+                    <p class="govuk-body-m">
+                      {{ email.description}}
+                    </p>
+                  </div>
+                  <div class="govuk-grid-column-two-thirds">
+                    <div class="govuk-body-m">
+                      <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a>
+                      {% if email.explanation %}
+                        </br>
+                        <p class="govuk-body-m">({{ email.explanation }})</p>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+                {% endif %}
+              {% endfor %}
             </p>
           </div>
         {% endif %}
