--- a/src/main/views/unknown-service.njk
+++ b/src/main/views/unknown-service.njk
@@ -15,6 +15,10 @@
     <p class="govuk-body">
         <a href="/services/search-by-postcode">{{ a_1 }}</a>
     </p>
+    <h2 class="govuk-heading-m">{{ h2_5 }}</h2>
+    <p class="govuk-body">
+        <a href="/services/search-by-prefix">{{ a_5 }}</a>
+    </p>
     <h2 class="govuk-heading-m">
       {{ h2_2 }}
     </h2>
