--- a/src/main/views/search/prefix-search.njk
+++ b/src/main/views/search/prefix-search.njk
@@ -25,7 +25,7 @@
 
     {% if results.length > 0 %}
       <h2 class="govuk-heading-m">
-            <span id="header-hint" class="govuk-hint">Courts or tribunals starting with '{{prefix}}'</span>
+            <span id="header-hint" class="govuk-hint">{{ resultsHint }} '{{ prefix }}'</span>
       </h2>
 
       {% for court in results %}
@@ -34,7 +34,7 @@
         </h2>
       {% endfor %}
     {% else %}
-        <span id="header-hint" class="govuk-hint">Browse by name of court or tribunal</span>
+        <span id="header-hint" class="govuk-hint">{{ noResultsHint }}</span>
     {% endif %}
 
     {% for letter in ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N",
