--- a/src/main/views/search/prefix-search.njk
+++ b/src/main/views/search/prefix-search.njk
@@ -18,7 +18,6 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
     <h1 class="govuk-heading-l">
       {{ question }}
     </h1>
@@ -27,25 +26,22 @@
       <h2 class="govuk-heading-m">
             <span id="header-hint" class="govuk-hint">{{ resultsHint }} '{{ prefix }}'</span>
       </h2>
-
       {% for court in results %}
         <h2 class="govuk-heading-m">
           <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.name }}</a>
         </h2>
       {% endfor %}
     {% else %}
-        <span id="header-hint" class="govuk-hint">{{ noResultsHint }}</span>
+      <span id="header-hint" class="govuk-hint">{{ noResultsHint if prefix else summary }}</span>
     {% endif %}
 
     {% for letter in ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N",
       "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"] %}
-
       {{ govukButton({
         text: letter,
         href: "search-by-prefix?prefix=" + letter,
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-0 continue"
       }) }}
-
     {% endfor %}
 
     {% if hasNoResults %}
