Update prefix search template strings

--- a/src/main/views/search/prefix-search.njk
+++ b/src/main/views/search/prefix-search.njk
@@ -32,7 +32,7 @@
         </h2>
       {% endfor %}
     {% else %}
-      <span id="header-hint" class="govuk-hint">{{ noResultsHint if prefix else summary }}</span>
+      <span id="header-hint" class="govuk-hint">{{ noResultsHint + "'" + prefix + "'" if prefix else summary }}</span>
     {% endif %}
 
     {% for letter in ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N",
