--- a/src/main/views/search/prefix-search.njk
+++ b/src/main/views/search/prefix-search.njk
@@ -19,7 +19,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
-      {{ question }}
+      {{ heading }}
     </h1>
 
     {% if results.length > 0 %}
