--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -27,26 +27,28 @@
         {{ hint }}
       </span>
     </h1>
-    <form method="GET" action="/courts">
-      <div class="govuk-form-group {{ 'govuk-form-group--error' if error.text }}" id="form-group">
-        <h2 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--m" for="search">
-            {{ text }}
-          </label>
-          <div id="event-name-hint" class="govuk-hint">
-            {{ textExample }}
-          </div>
 
-          {% if (error.text) %}
-            <span id="search-error" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> {{ error.text }}
-            </span>
-          {% endif %}
-        </h2>
-        <input class="govuk-input govuk-!-width-three-quarters {{ 'govuk-input--error' if error.text }}" id="search" name="search" type="text" value="{{ search }}">
-        <button type="submit" class="govuk-button continue">{{ button }}</button>
-      </div>
-    </form>
+      <form method="GET" action="/courts">
+        {{ govukInput({
+          label: {
+            text: text,
+            classes: "govuk-label govuk-label--m"
+          },
+          hint: {
+            text: textExample
+          },
+          classes: "govuk-input govuk-!-width-three-quarters",
+          id: "search",
+          name: "search",
+          value: search,
+          errorMessage: { text: errorText[errorType] } if error
+        }) }}
+        {{ govukButton({
+          text: button,
+          classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
+          type: submit
+        }) }}
+      </form>
 
     {% if (path !== '/search-by-name') and (results.length > 0) %}
       <p role="status" class="govuk-body">{{ foundResult if results.length === 1 else foundResults }}</p>
