--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -80,7 +80,7 @@
           <h3 class="govuk-heading-m">
             {{ openingTimesHeading }}
           </h3>
-            <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <dl class="govuk-summary-list">
               {% for times in results['opening_times'] %}
                 <div class="govuk-summary-list__row">
                   <dd class="govuk-summary-list__key">
@@ -102,11 +102,13 @@
           <h3 class="govuk-heading-m">
             {{ emailHeading }}
           </h3>
-            <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <dl class="govuk-summary-list">
               {% for email in results.emails %}
                 <div class="govuk-summary-list__row">
                   <dd class="govuk-summary-list__key">
+                  <h3 class="govuk-body-m">
                     {{ email.description }}
+                  </h3>
                   </dd>
                   <dd class="govuk-summary-list__value">
                     <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a>
@@ -126,7 +128,7 @@
           <h3 class="govuk-heading-m">
             {{ telephoneHeading }}
           </h3>
-            <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <dl class="govuk-summary-list">
               {% for telephone in results.contacts %}
                 <div class="govuk-summary-list__row">
                   <dd class="govuk-summary-list__key">
@@ -165,7 +167,7 @@
             {% endif %}
           </p>
 
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
+          <dl class="govuk-summary-list">
             {% for facility in results.facilities %}
               <div class="govuk-summary-list__row">
                 <dd class="govuk-summary-list__key">
