--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -62,66 +62,57 @@
         {% if results.enquiries and results.enquiries.phone.length %}
           <div class="govuk-grid-row .contacts" id="contacts">
             <h4 class="govuk-heading-m">
-              {% if results.enquiries.fax.number %}
+              {% if results.enquiries.fax.length %}
                 {{ telephoneAndFaxHeading }}
               {% else %}
                 {{ telephoneHeading }}
               {% endif %}
             </h4>
-            {% for telephone in results.enquiries.phone %}
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-third">
-                  <p class="govuk-body-m">
+
+            <dl class="govuk-summary-list">
+              {% for telephone in results.enquiries.phone %}
+                <div class="govuk-summary-list__row">
+                  <dd class="govuk-summary-list__key">
                     {{ telephone.description}}
-                  </p>
+                  </dd>
+                  <dd class="govuk-summary-list__value">
+                   <a class="govuk-link" href="tel:{{ telephone.number }}">{{ telephone.number }}</a>
+                   {% if telephone.explanation %}
+                     <p class="govuk-body-m">({{ telephone.explanation }})</p>
+                   {% endif %}
+                  </dd>
                 </div>
-                <div class="govuk-grid-column-two-thirds">
-                  <div class="govuk-body-m">
-                    <a class="govuk-link" href="tel:{{ telephone.number }}">{{ telephone.number }}</a>
-                    {% if telephone.explanation %}
-                      </br>
-                      <p class="govuk-body-m">({{ telephone.explanation }})</p>
-                    {% endif %}
-                  </div>
+              {% endfor %}
+
+              {% for telephone in results.enquiries.welshPhone %}
+                <div class="govuk-summary-list__row">
+                  <dd class="govuk-summary-list__key">
+                    {{ telephone.description }}
+                  </dd>
+                  <dd class="govuk-summary-list__value">
+                   <a class="govuk-link" href="tel:{{ telephone.number }}">{{ telephone.number }}</a>
+                   {% if telephone.explanation %}
+                     <p class="govuk-body-m">({{ telephone.explanation }})</p>
+                   {% endif %}
+                  </dd>
                 </div>
-              </div>
-            {% endfor %}
-            {% for telephone in results.enquiries.welshPhone %}
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-third">
-                  <p class="govuk-body-m">
-                    {{ telephone.description}}
-                  </p>
-                </div>
-                <div class="govuk-grid-column-two-thirds">
-                  <div class="govuk-body-m">
-                    <a class="govuk-link" href="tel:{{ telephone.number }}">{{ telephone.number }}</a>
-                    {% if telephone.explanation %}
-                      </br>
-                      <p class="govuk-body-m">({{ telephone.explanation }})</p>
-                    {% endif %}
-                  </div>
-                </div>
-              </div>
-            {% endfor %}
-            {% for fax in results.enquiries.fax %}
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-third">
-                  <p class="govuk-body-m">
-                    {{ fax.description}}
-                  </p>
-                </div>
-                <div class="govuk-grid-column-two-thirds">
-                  <div class="govuk-body-m">
+              {% endfor %}
+
+              {% for fax in results.enquiries.fax %}
+                <div class="govuk-summary-list__row">
+                  <dd class="govuk-summary-list__key">
+                    {{ fax.description }}
+                  </dd>
+                  <dd class="govuk-summary-list__value">
                     <a class="govuk-link" href="tel:{{ fax.number }}">{{ fax.number }}</a>
                     {% if fax.explanation %}
-                      </br>
                       <p class="govuk-body-m">({{ fax.explanation }})</p>
                     {% endif %}
-                  </div>
+                  </dd>
                 </div>
-              </div>
-            {% endfor %}
+              {% endfor %}
+            </dl>
+
             <p class="govuk-body-m">
               <a class="govuk-link" href="https://www.gov.uk/call-charges">
                 {{ callCharges }}
@@ -138,93 +129,50 @@
           </div>
         {% endif %}
 
-
-        {% if results.slug === 'civil-money-claims-service-centre' or results.slug === 'county-court-money-claims-centre-ccmcc' %}
-          <div class="govuk-grid-row .contacts" id="contacts">
+        {% if results.application_updates and results.application_updates.length %}
+          <div class="govuk-grid-row" id="applicationUpdates">
             <h4 class="govuk-heading-m">
-              Get an update on your application
+              {{ getAnUpdateOnYourApplication }}
             </h4>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-third">
-                <p class="govuk-body-m">
-                  Online Money Claims
-                </p>
-              </div>
-              <div class="govuk-grid-column-two-thirds">
-                <div class="govuk-body-m">
-                  <a class="govuk-link" href="https://money-claim-queries.form.service.justice.gov.uk">Contact HMCTS about a money claim</a>
+            <dl class="govuk-summary-list">
+              {% for applicationUpdate in results.application_updates %}
+                <div class="govuk-summary-list__row">
+                  <dd class="govuk-summary-list__key">
+                    {{ applicationUpdate.type }}
+                  </dd>
+                  <dd class="govuk-summary-list__value">
+                    {% if applicationUpdate.email %}
+                      <a class="govuk-link" href="mailto:{{ applicationUpdate.email }}">{{ applicationUpdate.email }}</a>
+                    {% else %}
+                      <a class="govuk-link" href="{{ applicationUpdate.external_link }}">{{ applicationUpdate.external_link_description }}</a>
+                    {% endif %}
+                  </dd>
                 </div>
-              </div>
-            </div>
-
-            {% if results.slug === 'county-court-money-claims-centre-ccmcc' %}
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-third">
-                  <p class="govuk-body-m">
-                    County Court Money Claims
-                  </p>
-                </div>
-                <div class="govuk-grid-column-two-thirds">
-                  <div class="govuk-body-m">
-                    <a class="govuk-link" href="mailto:ccmcccustomerenquiries@justice.gov.uk">ccmcccustomerenquiries@justice.gov.uk</a>
-                  </div>
-                </div>
-              </div>
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-third">
-                  <p class="govuk-body-m">
-                    Money Claims Online
-                  </p>
-                </div>
-                <div class="govuk-grid-column-two-thirds">
-                  <div class="govuk-body-m">
-                    <a class="govuk-link" href="mailto:CCBC@Justice.gov.uk">CCBC@Justice.gov.uk</a>
-                  </div>
-                </div>
-              </div>
-            {% endif %}
+              {% endfor %}
+            </dl>
           </div>
         {% endif %}
 
-        {% if results.enquiries.emails.length or results.enquiries.sendDocumentsEmail.length %}
+        {% if results.emails and results.emails.length %}
           <div class="govuk-grid-row .emails" id="emails">
             <h4 class="govuk-heading-m">
               {{ emailHeading }}
             </h4>
-            <p class="govuk-body-m">
-              {% for email in results.enquiries.sendDocumentsEmail %}
-                <p class="govuk-body-m">
-                  {{ sendUsYourDocuments }}: <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a><br>
-                  {{ email.explanation }}
-                </p>
-              {% endfor %}
-              {% for email in results.enquiries.emails %}
-                <p class="govuk-body-m">
-                  {{ updates }}: <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a><br>
-                  {{ email.explanation }}
-                </p>
-              {% endfor %}
+            <dl class="govuk-summary-list">
               {% for email in results.emails %}
-                {% if email.description !== 'Enquiries' and email.description !== 'Send documents' %}
-                <div class="govuk-grid-row">
-                  <div class="govuk-grid-column-one-third">
-                    <p class="govuk-body-m">
-                      {{ email.description}}
-                    </p>
-                  </div>
-                  <div class="govuk-grid-column-two-thirds">
-                    <div class="govuk-body-m">
-                      <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a>
-                      {% if email.explanation %}
-                        </br>
-                        <p class="govuk-body-m">({{ email.explanation }})</p>
-                      {% endif %}
-                    </div>
-                  </div>
+                <div class="govuk-summary-list__row">
+                  <dd class="govuk-summary-list__key">
+                    {{ email.description }}
+                  </dd>
+                  <dd class="govuk-summary-list__value">
+                    <a class="govuk-link" href="mailto:{{ email.address }}">{{ email.address }}</a>
+                    {% if email.explanation %}
+                      <p class="govuk-body-m">({{ email.explanation }})</p>
+                    {% endif %}
+                  </dd>
                 </div>
-                {% endif %}
               {% endfor %}
-            </p>
+            </dl>
           </div>
         {% endif %}
       </div>
