--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -233,7 +233,7 @@
         {% if results['areas_of_law'] and results['areas_of_law'] |  selectattr("external_link") | length > 0 %}
           <div class="govuk-grid-row" id="areas-of-law">
             <h3 class="govuk-heading-m">
-              {{ areasOfLawHeadingNotInPerson }}
+              {{ areasOfLawHeading }}:
             </h3>
             <ul class="govuk-list">
               {% for area in results['areas_of_law'] | sort(attribute="name") %}
@@ -251,6 +251,21 @@
                   {% if externalLink %}
                     <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
                   {% endif %}
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        {% endif %}
+
+        {% if results.additional_links and results.additional_links.length %}
+          <div class="govuk-grid-row" id="find-out-more-about">
+            <h3 class="govuk-heading-m">
+              {{ findOutMoreAboutHeading }}:
+            </h3>
+            <ul class="govuk-list">
+              {% for additionalLink in results.additional_links %}
+                <li>
+                  <a class="govuk-link" href="{{ additionalLink.url }}">{{ additionalLink.description }}</a>
                 </li>
               {% endfor %}
             </ul>
