FACT-980: Allowing urgent notices to use hyperlinks

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -57,7 +57,7 @@
       {% if results['urgent_message'] %}
         <div class="govuk-grid-row" id="urgent-message">
           {{ govukWarningText({
-            text: results['urgent_message'],
+            text: results['urgent_message'] | safe,
             iconFallbackText: "Warning"
           }) }}
         </div>
