--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -40,13 +40,17 @@
         </div>
 
         {% if results['urgent_message'] %}
-          <div class="govuk-grid-row" id="urgent-message">
-            {{ govukWarningText({
-              text: results['urgent_message'],
-              iconFallbackText: "Warning"
-            }) }}
+          <div id="urgent-message" class="govuk-grid-row" style="padding: 10px 0; margin: 0 0 30px">
+            <div class="warning-symbol" style="position: relative;">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            </div>
+            <div>
+              <strong class="govuk-warning-text__text" style="padding-left: 45px;">{{ results['urgent_message'] | safe }}</strong>
+            </div>
           </div>
         {% endif %}
+
+
 
         {% if results.info %}
           <div class="govuk-grid-row" id="additional-info">
