--- a/src/main/assets/scss/court-details.scss
+++ b/src/main/assets/scss/court-details.scss
@@ -13,4 +13,21 @@
   .multiple-addresses {
     padding-left: 0;
   }
+
+  .urgent-message {
+    padding: 10px 0;
+    margin: 0 0 30px;
+  }
+
+  .warning-symbol-div {
+    position: relative;
+  }
+
+  .urgent-message-text {
+    padding-left: 45px;
+  }
 }
+
+
+
+
