--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -22,33 +22,38 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">{{ question }}
-      <span id="header-hint" class="govuk-hint">
-        {{ hint }}
-      </span>
-    </h1>
 
-      <form method="GET" action="/courts">
-        {{ govukInput({
-          label: {
-            text: text,
-            classes: "govuk-label govuk-label--m"
-          },
-          hint: {
-            text: textExample
-          },
-          classes: "govuk-input govuk-!-width-three-quarters",
-          id: "search",
-          name: "search",
-          value: search,
-          errorMessage: { text: errorText[errorType] } if error
-        }) }}
-        {{ govukButton({
-          text: button,
-          classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
-          type: submit
-        }) }}
-      </form>
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      <h1 class="govuk-fieldset__heading">
+        {{ question }}
+      </h1>
+    </legend>
+
+    <div id="know-location-hint" class="govuk-hint">
+      {{ hint }}
+    </div>
+
+    <form method="GET" action="/courts">
+      {{ govukInput({
+        label: {
+          text: text,
+          classes: "govuk-label govuk-label--m"
+        },
+        hint: {
+          text: textExample
+        },
+        classes: "govuk-input govuk-!-width-three-quarters",
+        id: "search",
+        name: "search",
+        value: search,
+        errorMessage: { text: errorText[errorType] } if error
+      }) }}
+      {{ govukButton({
+        text: button,
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
+        type: submit
+      }) }}
+    </form>
 
     {% if (path !== '/search-by-name') and (results.length > 0) %}
       <p role="status" class="govuk-body">{{ foundResult if results.length === 1 else foundResults }}</p>
