--- a/src/main/views/search/prefix-search.njk
+++ b/src/main/views/search/prefix-search.njk
@@ -18,10 +18,15 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">
-        {{ heading }}
-      </h1>
-      <span class="govuk-hint">{{ summary }}</span>
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <h1 class="govuk-fieldset__heading">
+          {{ heading }}
+        </h1>
+      </legend>
+
+      <div id="prefix-hint" class="govuk-hint">
+        {{ summary }}
+      </div>
     </div>
   </div>
 
